k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: android-service
  namespace: store-ns
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: android
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: iphone-service
  namespace: store-ns
spec:
  selector:
    app: iphone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: laptop-service
  namespace: store-ns
spec:
  selector:
    app: laptop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
